--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,27 @@
         <!-- Init -->
         <script type="text/javascript"> /* <![CDATA[ */
 
+            //Get parameters URL
+            function $_GET(param) {
+                var vars = {};
+                window.location.href.replace( location.hash, '' ).replace(
+                /[?&]+([^=&]+)=?([^&]*)?/gi, // regexp
+                function( m, key, value ) { // callback
+                        vars[key] = value !== undefined ? value : '';
+            }
+       	    );
+
+            if ( param ) {
+                return vars[param] ? vars[param] : null;
+        	}
+       	 	return vars;
+	    }
+	    
+	    // Get values of parameters URL 
+            var HOST = $_GET("host");
+            var PORT = $_GET("port");
+            var PROTO= $_GET("proto");
+
             // Get display div from document
             var display = document.getElementById("display");
 
@@ -44,14 +65,14 @@
 
             // Add client to display div
             display.appendChild(guac.getDisplay().getElement());
-            
+
             // Error handler
             guac.onerror = function(error) {
                 alert(error);
             };
 
             // Connect
-            guac.connect("ip=172.18.25.142&port=22&proto=ssh");
+            guac.connect("ip="+HOST+"&port="+PORT+"&proto="+PROTO+"");
 
             // Disconnect on close
             window.onunload = function() {
